--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "seed": "tsx prisma/seed.ts"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.25.2",
+    "@clerk/themes": "^2.1.37",
     "@prisma/client": "^6.12.0",
     "@prisma/extension-accelerate": "^2.0.2",
     "next": "15.4.1",
