--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@prisma/client": "^6.12.0",
     "@prisma/extension-accelerate": "^2.0.2",
     "next": "15.4.1",
+    "primeicons": "^7.0.0",
+    "primereact": "^10.9.6",
     "react": "19.1.0",
     "react-dom": "19.1.0"
   },
