--- a/package.json
+++ b/package.json
@@ -17,11 +17,25 @@
     "@clerk/themes": "^2.1.37",
     "@prisma/client": "^6.12.0",
     "@prisma/extension-accelerate": "^2.0.2",
+    "@radix-ui/react-alert-dialog": "^1.1.14",
+    "@radix-ui/react-dialog": "^1.1.14",
+    "@radix-ui/react-popover": "^1.1.14",
+    "@radix-ui/react-select": "^2.2.5",
+    "@radix-ui/react-separator": "^1.1.7",
+    "@radix-ui/react-slot": "^1.2.3",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
+    "lucide-react": "^0.525.0",
     "next": "15.4.1",
+    "next-themes": "^0.4.6",
     "primeicons": "^7.0.0",
     "primereact": "^10.9.6",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-day-picker": "^9.8.0",
+    "react-dom": "19.1.0",
+    "sonner": "^2.0.6",
+    "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -34,6 +48,7 @@
     "prisma": "^6.12.0",
     "tailwindcss": "^4",
     "tsx": "^4.20.3",
+    "tw-animate-css": "^1.3.5",
     "typescript": "^5"
   }
 }
